# laba16

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithms/: algorithms.c  algorithms.h
libs/data_structures/matrix/: matrix.c  matrix.h
